--- a/physics/box2d_extension/CMakeLists.txt
+++ b/physics/box2d_extension/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(box2d_extension VERSION 1.0 LANGUAGES C)
+project(box2d_wrapper VERSION 1.0 LANGUAGES C)
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 
 file(GLOB_RECURSE BOX2D_SOURCES
@@ -12,21 +12,22 @@ file(GLOB_RECURSE BOX2D_HEADERS
     ${CMAKE_SOURCE_DIR}/box2d/include/box2d/*.h
 )
 
-add_library(box2d_extension STATIC
-    box2d_extension.h
-    box2d_extension.c
+set(LIBRARY_NAME box2d_extension) # name change here
+
+add_library(${LIBRARY_NAME} SHARED
     ${BOX2D_HEADERS}
     ${BOX2D_SOURCES}
+    box2d_extension.h
+    box2d_extension.c
 )
 
-target_include_directories(box2d_extension PUBLIC
+target_include_directories(${LIBRARY_NAME} PUBLIC
     ${CMAKE_SOURCE_DIR}/box2d/include
     ${CMAKE_SOURCE_DIR}/box2d/src
-    ${CMAKE_SOURCE_DIR}
 )
 
-set_target_properties(box2d_extension PROPERTIES LINKER_LANGUAGE C)
+set_target_properties(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE C)
 
 if (MSVC)
-    target_compile_options(box2d_extension PRIVATE /experimental:c11atomics /std:c17)
+    target_compile_options(${LIBRARY_NAME} PRIVATE /experimental:c11atomics /std:c17)
 endif()
